Library z-index fix

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -10,6 +10,7 @@
     transform: translateX(-100%);
     transition: all 0.5s ease;
     opacity: 0;
+    z-index: 5;
 
     h2 {
         padding: 2rem;
